syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.mystore.stock.api;

service StockOrderService {
  option (kalix.codegen) = {
    event_sourced_entity : {
      name : "io.mystore.stock.entity.StockOrder"
      entity_type : "stock_order"
      state : "io.mystore.stock.entity.StockOrderState"
      events : [
        "io.mystore.stock.entity.StockOrderCreated",
        "io.mystore.stock.entity.StockSkuItemShipped",
        "io.mystore.stock.entity.StockSkuItemReleased" // force line breaks
      ]
    }
  };

  rpc CreateStockOrder(CreateStockOrderCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/stork-orders/{stock_order_id}/create-stock-order"
      body : "*"
    };
  }

  rpc ShippedStockSkuItem(ShippedStockSkuItemToStockOrderCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/stork-orders/{stock_order_id}/ship-stock-sku-item"
      body : "*"
    };
  }

  rpc ReleaseStockSkuItem(ReleaseStockSkuItemFromStockOrderCommand)
      returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put : "/stork-orders/{stock_order_id}/release-stock-sku-item"
      body : "*"
    };
  }

  rpc GetStockOrder(GetStockOrderRequest) returns (StockOrder) {
    option (google.api.http) = {
      get : "/stock-orders/{stock_order_id}"
    };
  }
}

message CreateStockOrderCommand {
  string stock_order_id = 1 [ (kalix.field).entity_key = true ];
  string sku_id = 2;
  string sku_name = 3;
  int32 quantity = 4;
}

message ShippedStockSkuItemToStockOrderCommand {
  string stock_order_id = 1 [ (kalix.field).entity_key = true ];
  string sku_id = 2;
  string stock_sku_item_id = 3;
  string order_id = 4;
  string order_sku_item_id = 5;
  google.protobuf.Timestamp shipped_utc = 6;
}

message ReleaseStockSkuItemFromStockOrderCommand {
  string stock_order_id = 1 [ (kalix.field).entity_key = true ];
  string sku_id = 2;
  string stock_sku_item_id = 3;
  string order_id = 4;
  string order_sku_item_id = 5;
}

message GetStockOrderRequest {
  string stock_order_id = 1 [ (kalix.field).entity_key = true ];
}

message StockOrder {
  string stock_order_id = 1;
  string sku_id = 2;
  string sku_name = 3;
  int32 quantity = 4;
  google.protobuf.Timestamp shipped_utc = 5;
  repeated StockSkuItem stock_sku_items = 6;
}

message StockSkuItem {
  string stock_sku_item_id = 1;
  string sku_id = 2;
  string sku_name = 3;
  string order_id = 4;
  string order_sku_item_id = 5;
  google.protobuf.Timestamp shipped_utc = 6;
  string stock_order_id = 7;
}
